# Boost_ML-Agents

./: .gitignore  README.md  init.bat  init.ps1  pyproject.toml  requirements-cuda.txt  requirements-win_cpu.txt
MLAgentsTemplate/Assets/ML-Agents/Timers/: 3DBall_timers.json
MLAgentsTemplate/ProjectSettings/: ProjectSettings.asset
Project/UserSettings/: EditorUserSettings.asset
Project/UserSettings/Layouts/: default-2023.dwlt
boost_ml_agents/: __main__.py  cli.py
boost_ml_agents/modules/: cudainstaller.py  pyenvinstaller.py  unityinstaller.py  unitymanagement.py  utils.py
boost_ml_agents/types/: mlagentsEditorver.py
envbuilder/: cli.py
envbuilder/modules/: cudainstaller.py  pyenvinstaller.py
envbuilder/types/: OSType.py
src/boost_ml_agents/: __init__.py  cli.py
