[project]
name = "boost-ml-agents"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tsyu1234", email = "syukunt@gmail.com" }
]
dependencies = [
    "mlagents>=0.30.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "boost_ml_agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "click>=8.1.7",
    "tqdm>=4.66.2",
    "requests>=2.31.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["boost_ml_agents"]
